LUGG-125 : #time 50m #Comment the images had a float applied to them which pushed them outside the bounds. An overflow: hidden style has been applied. #resolved

--- a/css/suitcase_dev.css
+++ b/css/suitcase_dev.css
@@ -724,6 +724,12 @@ nav.navigation .secondary-menu>li a {
 }
 
 /*////////////////////////////////////*/
+/* Fields */
+.field.field-name-body {
+    overflow: hidden;
+}
+
+/*////////////////////////////////////*/
 /* A Tag Mobile Styling */
 .item-list ul li.leaf {
     list-style-image: none;
@@ -1134,6 +1140,10 @@ nav.navigation .secondary-menu>li a:hover {
         -ms-word-break: break-all;
         word-break: break-all;
         word-break: break-word;
+    }
+
+    .field.field-name-body img {
+        float: none !important;
     }
 
     .view .field-content a {
